[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_log"
version = "0.1.0"
description = "Sensor data logging for Raspberry Pi"
requires-python = ">=3.9"

# Note: Hardware dependencies (bme280, smbus2) are optional since
# rpi_server_cockpit only needs the Sensor base class and reflection,
# not the actual hardware drivers.
dependencies = []

[project.optional-dependencies]
# Install these when running on actual hardware with sensors
hardware = [
    "pimoroni-bme280",
    "smbus2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sensors", "sensors.*", "radio", "radio.*", "utils", "utils.*"]

[tool.setuptools]
py-modules = [
    "node_broadcast",
    "gateway_server",
]
